--- a/internal/validator/local.env
+++ b/internal/validator/local.env
@@ -1,5 +1,7 @@
 PORT='3000'
 PEERS='validator-1;validator-2;validator-3;validator-4'
+MEMPOOL_EVICTION=200
 
 export PORT=$PORT
 export PEERS=$PEERS
+export MEMPOOL_EVICTION=$MEMPOOL_EVICTION
